--- a/client/src/style.css
+++ b/client/src/style.css
@@ -63,3 +63,15 @@ a {
   padding: 0.5rem;
   border-radius: 0.5rem;
 }
+
+/* filterBar Styling */
+
+.tags-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 0.5rem;
+  margin: 2rem 0;
+  background-color: #f2f2f2;
+  height: 2rem;
+}
