--- a/client/src/style.css
+++ b/client/src/style.css
@@ -122,7 +122,7 @@ a {
 }
 
 .landing-section {
-  background: url("./images/bg.jpg");
+  background: url("./components/images/bg.jpg");
   background-position: center;
   background-size: cover;
   height: calc(100vh - 6rem);
@@ -150,6 +150,7 @@ a {
 }
 
 .main-right-div{
+  display: flex;
   justify-content: center;
   align-items: center;
 }
