--- a/client/src/style.css
+++ b/client/src/style.css
@@ -13,6 +13,7 @@ body,
 #root {
   height: 100%;
   min-height: 100%;
+  background-color: #556780;
 }
 
 a {
@@ -23,8 +24,9 @@ a {
 /* Header styles */
 
 .header {
-  height: 1rem;
+  height: 6rem;
   background-color: #fff;
+  z-index: 1;
 }
 
 .header-logo {
@@ -59,6 +61,22 @@ a {
   color: #fff;
 }
 
+.dashboard-search-bar-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.dashboard-search-bar {
+  display: flex;
+  justify-content: center;
+  width: 25rem;
+  height: 3rem;
+  border-radius: 0.4rem;
+  margin: 3rem 0;
+  padding: 1rem;
+}
+
 /* Card styling */
 
 .card-container {
@@ -73,6 +91,8 @@ a {
   height: 10rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
+  width: 15rem;
+  margin: 1rem;
 }
 
 /* filterBar Styling */
@@ -81,10 +101,10 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 0.5rem;
+  font-size: 1rem;
   margin: 2rem 0;
   background-color: #f2f2f2;
-  height: 2rem;
+  height: 3rem;
 }
 /* landingPage styling */
 
@@ -92,7 +112,6 @@ a {
   display: flex;
   justify-content: center;
   align-content: center;
-  margin-top: 5rem;
 }
 
 .landingPage-container {
@@ -131,4 +150,18 @@ a {
 .layer {
   background-color: rgba(75, 86, 160, 0.5);
   height: 100%;
+}
+
+/* Dashboard styling */
+
+.dashboard-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+}
+
+.dashboard-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
