more on landing page

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -137,28 +137,53 @@ a {
   width: 10rem;
   height:10rem;
 }
-
+/*calc(100vh - 6rem);*/
 .single-main-div{
-  display:flex;
-  margin-top: 7rem;
+  height: 100vh;
+  background-color: #556780;
+  background-size: cover;
+  margin-top: 5rem;
+
 }
+.single-page-display{
+  display:flex;
+  width:50%;
+
+
+}
+
 
 .main-left-div{
   justify-content: center;
   align-items: center;
   margin-right: 0.3rem;
+  margin-top: 1rem;
+  width:50%;
+  background-color: white;
+  border-radius: 0.5rem;
 }
 
 .main-right-div{
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+    margin-top: 1rem;
+    width:50%;
 }
 .top-right-div{
 margin:0.5rem 0.5rem 0.5rem 0.5rem;
+background-color: #E0E0E0;
+border-radius: 0.5rem;
+height:50%;
+width:50%;
  }
  .bottom-right-div{
  margin:0.5rem 0.5rem 0.5rem 0.5rem;
+ height:50%;
+ width:50%;
+ background-color: C4C4C4;
+ border-radius: 0.5rem;
  }
 
 .link-button{
