styled the landing page

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -13,7 +13,10 @@ body,
 #root {
   height: 100%;
   min-height: 100%;
-  background-color: #556780;
+  background-color: rgba(75, 86, 160, 0.5);
+  background: url("./images/bg.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 a {
@@ -80,7 +83,14 @@ a {
 /* Card styling */
 
 .card-container {
+  width: 100%;
+  position: absolute;
+  top: 6%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   margin-top: 20rem;
 }
@@ -123,7 +133,7 @@ a {
 .landingPage-container > h1 {
   font-size: 3rem;
   font-weight: 200;
-  margin: 15rem 0 5rem 0;
+  margin: 5rem 0 1rem 0;
   color: #f2c94c;
 }
 
@@ -140,38 +150,35 @@ a {
   color: rgba(255, 255, 255, 0.7);
 }
 
-.landing-section {
+/*.landing-section {
   background: url("./images/bg.jpg");
   background-position: center;
   background-size: cover;
-  height: calc(100vh - 6rem);
-}
+}*/
 
 .layer {
-  height: 100%;
+  position: relative;
+  height: 100vh;
   background-color: rgba(75, 86, 160, 0.5);
 }
 
-.img-container{
-  width:5rem;
-height:5rem;
-align-self: center;
- width:50%;
- height: 50%;
+.img-container {
+  width: 5rem;
+  height: 5rem;
+  align-self: center;
+  width: 50%;
+  height: 50%;
 }
 /*calc(100vh - 6rem);*/
-.single-main-div{
+.single-main-div {
   height: 100vh;
   background-color: #556780;
   background-size: cover;
   margin-top: 5rem;
-
 }
-.single-page-display{
-  display:flex;
-  width:50%;
-
-
+.single-page-display {
+  display: flex;
+  width: 50%;
 }
 
 /* Dashboard styling */
@@ -188,80 +195,78 @@ align-self: center;
   justify-content: space-between;
 }
 
-.main-left-div{
+.main-left-div {
   justify-content: center;
   align-items: center;
   margin-right: 0.3rem;
   margin-top: 1rem;
-  width:50%;
+  width: 50%;
   background-color: white;
   border-radius: 0.5rem;
 }
 
-.main-right-div{
+.main-right-div {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-    margin-top: 1rem;
-    width:50%;
-
+  margin-top: 1rem;
+  width: 50%;
 }
-.top-right-div{
-margin:0.5rem 0.5rem 0.5rem 0.5rem;
-background-color: #E0E0E0;
-border-radius: 0.5rem;
-height:50%;
-width:50%;
- }
- .bottom-right-div{
- margin:0.5rem 0.5rem 0.5rem 0.5rem;
- height:50%;
- width:50%;
- background-color: C4C4C4;
- border-radius: 0.5rem;
- }
+.top-right-div {
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+  background-color: #e0e0e0;
+  border-radius: 0.5rem;
+  height: 50%;
+  width: 50%;
+}
+.bottom-right-div {
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+  height: 50%;
+  width: 50%;
+  background-color: C4C4C4;
+  border-radius: 0.5rem;
+}
 
-.link-button{
-background-color:white;
-border:1px solid red;
-border-radius:0.5rem;
-color:black;
-margin-right:1rem;
-padding:0.5rem 1rem 0.5rem 1rem;
+.link-button {
+  background-color: white;
+  border: 1px solid red;
+  border-radius: 0.5rem;
+  color: black;
+  margin-right: 1rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
 .cardTry {
-    display:flex;
-    flex-direction:column;
-    font-size: 0.8rem;
-    height: 10rem;
-    padding: 0.5rem;
-    width: 15rem;
-    margin: 1rem;
-   justify-content:center;
-    /*border-radius: 10px;*/
+  display: flex;
+  flex-direction: column;
+  font-size: 0.8rem;
+  height: 10rem;
+  padding: 0.5rem;
+  width: 15rem;
+  margin: 1rem;
+  justify-content: center;
+  /*border-radius: 10px;*/
 }
 
 .top {
-   display: flex;
+  display: flex;
   flex-direction: column;
- height:70%;
- background-color:white;
+  height: 70%;
+  background-color: white;
 }
 
 .bottom {
   display: flex;
-   flex-direction: row;
-   height:30%;
-   background-color: #f2f2f2;
-   justify-content:center;
-   align-items: center;
+  flex-direction: row;
+  height: 30%;
+  background-color: #f2f2f2;
+  justify-content: center;
+  align-items: center;
 }
 
-.image2{
-   width:2rem;
+.image2 {
+  width: 2rem;
   height: 2rem;
-  padding-left:0.5rem;
-
+  padding-left: 0.5rem;
 }
