--- a/client/src/style.css
+++ b/client/src/style.css
@@ -237,6 +237,15 @@ a {
   padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .cardTry {
   display: flex;
   flex-direction: column;
@@ -246,6 +255,24 @@ a {
   width: 15rem;
   margin: 1rem;
   justify-content: center;
+  animation: fadein ease-in 1;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+
+  opacity: 0;
+  &:nth-child(1) {
+    animation-delay: 0.4s;
+  }
+  &:nth-child(2) {
+    animation-delay: 0.9s;
+  }
+  &:nth-child(3) {
+    animation-delay: 1.7s;
+  }
+  &:nth-child(4) {
+    animation-delay: 2.4s;
+  }
+
   /*border-radius: 10px;*/
 }
 
