styled individual page

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -152,26 +152,12 @@ a {
   background-color: rgba(75, 86, 160, 0.5);
 }
 
-.img-container{
-  width:5rem;
-height:5rem;
-align-self: center;
- width:50%;
- height: 50%;
-}
-/*calc(100vh - 6rem);*/
-.single-main-div{
-  height: 100vh;
-  background-color: #556780;
-  background-size: cover;
-  margin-top: 5rem;
-
-}
-.single-page-display{
-  display:flex;
-  width:50%;
-
-
+.img-container {
+  width: 5rem;
+  height: 5rem;
+  align-self: center;
+  width: 50%;
+  height: 50%;
 }
 
 /* Dashboard styling */
@@ -188,80 +174,134 @@ align-self: center;
   justify-content: space-between;
 }
 
-.main-left-div{
+/* singlePage styling  */
+.single-main-div {
+  display: flex;
   justify-content: center;
-  align-items: center;
-  margin-right: 0.3rem;
-  margin-top: 1rem;
-  width:50%;
-  background-color: white;
+  margin-top: 5rem;
+}
+
+.main-left-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #f2f2f2;
+  border-radius: 0.5rem;
+  height: 20rem;
+  width: 25rem;
+}
+
+.main-left-div div h3 {
+  margin: 1rem;
+}
+
+.img-single {
+  display: flex;
+  justify-content: center;
+  height: inherit;
+}
+
+.top-right-div div,
+.top-right-div div a {
+  display: block;
+  margin: 0.25rem 0;
+}
+
+.single-link:hover {
+  color: white;
+}
+
+.single-page-display {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-right-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 25rem;
+  margin-left: 2rem;
+}
+
+.top-right-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 1rem;
+  background-color: #e0e0e0;
+  border-radius: 0.5rem;
+  height: 40%;
+}
+
+.bottom-right-div {
+  height: 35%;
+  padding: 1rem;
+  background-color: #c4c4c4;
   border-radius: 0.5rem;
 }
 
-.main-right-div{
+.bottom-right-div h3 {
+  margin-bottom: 0.5rem;
+}
+.cat-tag {
+  display: flex;
+}
+.btn-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.link-button {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-    margin-top: 1rem;
-    width:50%;
-
-}
-.top-right-div{
-margin:0.5rem 0.5rem 0.5rem 0.5rem;
-background-color: #E0E0E0;
-border-radius: 0.5rem;
-height:50%;
-width:50%;
- }
- .bottom-right-div{
- margin:0.5rem 0.5rem 0.5rem 0.5rem;
- height:50%;
- width:50%;
- background-color: C4C4C4;
- border-radius: 0.5rem;
- }
-
-.link-button{
-background-color:white;
-border:1px solid red;
-border-radius:0.5rem;
-color:black;
-margin-right:1rem;
-padding:0.5rem 1rem 0.5rem 1rem;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  color: #fff;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  width: 35%;
 }
 
+.link-button:hover {
+  display: flex;
+  justify-content: center;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  background-color: #fff;
+  color: #55677f;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  width: 35%;
+}
 .cardTry {
-    display:flex;
-    flex-direction:column;
-    font-size: 0.8rem;
-    height: 10rem;
-    padding: 0.5rem;
-    width: 15rem;
-    margin: 1rem;
-   justify-content:center;
-    /*border-radius: 10px;*/
+  display: flex;
+  flex-direction: column;
+  font-size: 0.8rem;
+  height: 10rem;
+  padding: 0.5rem;
+  width: 15rem;
+  margin: 1rem;
+  justify-content: center;
+  /*border-radius: 10px;*/
 }
 
 .top {
-   display: flex;
+  display: flex;
   flex-direction: column;
- height:70%;
- background-color:white;
+  height: 70%;
+  background-color: white;
 }
 
 .bottom {
   display: flex;
-   flex-direction: row;
-   height:30%;
-   background-color: #f2f2f2;
-   justify-content:center;
-   align-items: center;
+  flex-direction: row;
+  height: 30%;
+  background-color: #f2f2f2;
+  justify-content: center;
+  align-items: center;
 }
 
-.image2{
-   width:2rem;
+.image2 {
+  width: 2rem;
   height: 2rem;
-  padding-left:0.5rem;
-
+  padding-left: 0.5rem;
 }
