--- a/client/src/style.css
+++ b/client/src/style.css
@@ -115,12 +115,12 @@ a {
 
 .tags-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   font-size: 1rem;
   margin: 2rem 0;
   background-color: #f2f2f2;
-  height: 3rem;
+  height: 5rem;
 }
 /* landingPage styling */
 
@@ -185,7 +185,6 @@ a {
 .dashboard-card-container {
   display: flex;
   flex-wrap: wrap;
-
   justify-content: flex-start;
 }
 
@@ -352,22 +351,29 @@ a {
 
 .tags-card {
   padding: 1rem;
+  width: 10.5rem;
 }
 
 .filter-tag {
   border: none;
+  margin: 0 0.5rem;
+  font-size: 0.8rem;
 }
 
 .filter-tag:hover {
   border: none;
   background: #f2c94c;
   color: #fff;
+  margin: 0 0.5rem;
+  font-size: 0.8rem;
 }
 
 .filter-selected {
   border: none;
   background: #f2c94c;
   color: #fff;
+  margin: 0 0.5rem;
+  font-size: 0.8rem;
 }
 
 .subTags {
